// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-tag ant-tag-outlined ant-tag-rtl css-var-root"
/>
`;

exports[`Tag rtl render component should be rendered correctly in RTL direction 2`] = `
<span
  class="ant-tag ant-tag-checkable css-var-root"
/>
`;
